<resources>
    <string name="app_name">Lab 5 - menu</string>
    <string name="action_settings">Settings</string>
    <string name="to_activity">До активності</string>
    <string name="popup">Popup</string>
    <string name="orientation">Змінити орєнтацію екрану</string>
    <string name="hint_input">input text</string>
    <string name="setText">встановити текст</string>
    <string name="action_1">1</string>
    <string name="action_2">2</string>
    <string name="action_3">123</string>
    <string name="action_4">321</string>
    <string name="popup_1">Popup menu item 1</string>
    <string name="popup_2">Popup menu item 2</string>
    <string name="popup_3">Popup menu item 3</string>
    <string name="sub">Подменю</string>
    <string name="popup_4">Popup menu item 4</string>
    <string name="popup_5">Popup menu item 5</string>
    <string name="popup_6">Popup menu item 6</string>
    <string name="alertButton">with buttons</string>
    <string name="alertList">with list</string>
    <string name="alertSwitcher">with switcher</string>
    <string name="alertRadio">with checkers</string>
    <string name="alertRating">with rating</string>
    <string name="to_third_activity">To Third Activity</string>
    <string name="alertButtons">with 2 buttons</string>
</resources>
