<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".ThirdActivity"
    tools:showIn="@layout/activity_third">

    <Button
        android:text="@string/alertButton"
        android:id="@+id/alertButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/alertList"
        android:id="@+id/alertList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/alertButtons"
        android:id="@+id/alertButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/alertSwitcher"
        android:id="@+id/alertSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/alertRadio"
        android:id="@+id/alertRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/alertRating"
        android:id="@+id/alertRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>